# pytest_nbgrader

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  .zizmor.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  environment-docs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  releasing.rst  usage.rst
docs/guide/: assertions-reference.rst  instructor-guide.rst  quickstart.rst  student-guide.rst
src/pytest_nbgrader/: __init__.py  assertions.py  cases.py  conftest.py  dumper.py  harness.py  loader.py  prerequisites.py  runner.py
tests/: __init__.py  test_assertions.py  test_cases.py  test_conftest.py  test_dumper.py  test_e2e.py  test_harness.py  test_integration.py  test_loader.py  test_prerequisites.py  test_pytest_nbgrader.py  test_runner.py
